design and fized campiangs by event

--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -17,7 +17,7 @@
                     event
                 </mat-icon>
                 <span class="logo-text h1" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
-                    Campañias
+                    Campañas
                 </span>
             </div>
             <!-- / APP TITLE -->
@@ -41,7 +41,7 @@
         <!-- / HEADER -->
 
 
-        <div class="widget-group p-12" fxLayout="row wrap" fxFlex="100" *fuseIfOnDom [@animateStagger]="{value:'50'}">
+        <div class="widget-group p-12" fxLayout="row wrap" fxFlex="100" *fuseIfOnDom >
 
             
             <!-- WIDGET 1 -->
