--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.scss
@@ -43,8 +43,8 @@
   margin-bottom: 25px;
   width: 500px;
   height: 300px;
-  border-style: solid;
-  color: grey
+  border-style: dashed;
+  color: #e0e0e0;
 }
 
 
