--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -63,7 +63,7 @@
                         <form class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
                             name="productForm" [formGroup]="productForm">
 
-                            <ng-template matStepLabel>Información general</ng-template>
+                            <ng-template matStepLabel>General</ng-template>
 
 
 
