design and fized campiangs by event

--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
@@ -191,6 +191,15 @@ margin: 46%;
 }
 
 
+@include media-breakpoint('xs') {
+    .margin-card {
+        margin-left: -11%;
+    }
+    
+}
+
+
+
 
 
 
