cambio de logos

--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
     <div class="logo">
-        <img class="logo-icon" src="assets/images/logos/fuse.svg">
+        <img class="logo-icon" src="assets/images/logos/turevento.png">
         <span class="logo-text secondary-text">FUSE</span>
     </div>
 
