--- a/src/app/main/pages/invoices/compact/compact.component.html
+++ b/src/app/main/pages/invoices/compact/compact.component.html
@@ -28,7 +28,7 @@
 
                     <div class="issuer accent" fxLayout="row" fxLayoutAlign="start center">
                         <div class="logo">
-                            <img src="assets/images/logos/fuse.svg">
+                            <img src="assets/images/logos/turevento.png">
                         </div>
 
                         <div class="info">
@@ -122,7 +122,7 @@
                 <div class="note">Please pay within 15 days. Thank you for your business.</div>
                 <div fxLayout="row" fxLayoutAlign="start start">
                     <div class="logo">
-                        <img src="assets/images/logos/fuse.svg">
+                        <img src="assets/images/logos/turevento.png">
                     </div>
                     <div class="small-note">
                         In condimentum malesuada efficitur. Mauris volutpat placerat auctor. Ut ac congue dolor. Quisque
