--- a/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/main/pages/authentication/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
         <div id="forgot-password-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
 
             <div class="logo">
-                <img src="assets/images/logos/fuse.svg">
+                <img src="assets/images/logos/turevento.png">
             </div>
             <div *ngIf="!emailSend">
                 <div class="title">RESTABLECER CONTRASEÑA</div>
