--- a/src/app/main/pages/coming-soon/coming-soon.component.html
+++ b/src/app/main/pages/coming-soon/coming-soon.component.html
@@ -7,7 +7,7 @@
             <div class="top">
 
                 <div class="logo">
-                    <img src="assets/images/logos/fuse.svg">
+                    <img src="assets/images/logos/turevento.png">
                 </div>
 
                 <div class="title">Hey! Thank you for checking out our app.</div>
