--- a/src/app/main/pages/invoices/modern/modern.component.html
+++ b/src/app/main/pages/invoices/modern/modern.component.html
@@ -147,7 +147,7 @@
                 <div class="note">Please pay within 15 days. Thank you for your business.</div>
                 <div fxLayout="row" fxLayoutAlign="start start">
                     <div class="logo">
-                        <img src="assets/images/logos/fuse.svg">
+                        <img src="assets/images/logos/turevento.png">
                     </div>
                     <div class="small-note">
                         In condimentum malesuada efficitur. Mauris volutpat placerat auctor. Ut ac congue dolor. Quisque
