--- a/src/app/main/pages/maintenance/maintenance.component.html
+++ b/src/app/main/pages/maintenance/maintenance.component.html
@@ -5,7 +5,7 @@
         <div id="maintenance-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
 
             <div class="logo">
-                <img src="assets/images/logos/fuse.svg">
+                <img src="assets/images/logos/turevento.png">
             </div>
 
             <div class="title">Closed for scheduled maintenance!</div>
