--- a/src/app/layout/vertical/layout-3/layout-3.component.html
+++ b/src/app/layout/vertical/layout-3/layout-3.component.html
@@ -5,7 +5,7 @@
     <fuse-sidebar name="chatPanel" position="left" class="chat-panel left-chat-panel"
                   [folded]="true" [foldedWidth]="70" [foldedAutoTriggerOnHover]="false"
                   lockedOpen="gt-md">
-        <chat-panel></chat-panel>
+       <!--<chat-panel></chat-panel>-->
     </fuse-sidebar>
     <!-- / CHAT PANEL -->
 
@@ -71,11 +71,13 @@
 <ng-container *ngIf="!fuseConfig.layout.sidepanel.hidden && fuseConfig.layout.sidepanel.position === 'right'">
 
     <!-- CHAT PANEL -->
+    <!--
     <fuse-sidebar name="chatPanel" position="right" class="chat-panel right-chat-panel"
                   [folded]="true" [foldedWidth]="70" [foldedAutoTriggerOnHover]="false"
                   lockedOpen="gt-md">
-        <chat-panel></chat-panel>
+    <chat-panel></chat-panel>
     </fuse-sidebar>
+    -->
     <!-- / CHAT PANEL -->
 
 </ng-container>
