send mail dialog design and function ready!

--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.scss
@@ -71,5 +71,16 @@ border-radius: 3%;
      font-size: 160%;
  }
 
+ .space {
+    margin: 3%;
 
 
+
+}
+
+
+.mat-progress-bar {
+        
+    height: 30px !important;
+
+}
