--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
@@ -2,55 +2,89 @@
     <mat-toolbar matDialogTitle class="mat-accent m-0">
         <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
             <span class="title-dialog dialog-title">Enviar invitación a:</span>
-            <button mat-icon-button (click)="matDialogRef.close()" aria-label="Close dialog">
+            <button mat-icon-button (click)="matDialogRef.close(true)" aria-label="Close dialog">
                 <mat-icon>close</mat-icon>
             </button>
         </mat-toolbar-row>
 
     </mat-toolbar>
 
-<div mat-dialog-content class="pb-0 m-0 dialog-content" fusePerfectScrollbar>
+    <div mat-dialog-content class="pb-0 m-0 dialog-content" fusePerfectScrollbar>
 
-        <div fxLayout="row" fxLayoutAlign="start start">
+        <div fxLayout="row" fxLayoutAlign="start start" *ngIf="!_campaignService.selectLoading">
 
-            <a
-                appearance="outline" fxFlex
-                mat-button class="reference-button save-button"
-                target="_blank"
-                (click)="SendInvitation('all')"
-            >
-             <mat-icon class="mr-8">done_all</mat-icon>
-             <span class="h1">Todos los invitados</span>
-         </a>
-         
-       <br>
-         
+            <a appearance="outline" fxFlex mat-button class="reference-button save-button"
+                (click)="allInvitation('all')">
+                
+                <span class="h1">Todos los invitados:</span>
+
+                <span class="h1"> {{ _campaignService.allContacts }} </span>
+
+
+            </a>
 
 
         </div>
 
 
-        <div fxLayout="row" fxLayoutAlign="start start">
 
-            <a
-            appearance="outline" fxFlex
-             mat-button class="reference-button save-button"
-            target="_blank"
-            (click)="SendInvitation('select')"
-            >
-             <mat-icon class="mr-8">check_box</mat-icon>
-             <span class="h1">Invitados marcados</span>
-         </a>
-         
-       <br>
-         
+        <mat-progress-bar *ngIf="_campaignService.allLoading" color="accent" class="checklist-progressbar"
+            mode="determinate" [value]="_campaignService.value * 10 " bufferValue="100">
+        </mat-progress-bar>
 
+        <div fxLayout="row" fxLayoutAlign="start start" *ngIf="_campaignService.allLoading">
+
+            <a appearance="outline" fxFlex mat-button class="reference-button save-button"
+                >
+                
+
+                <span class="h1"> {{  _campaignService.statusSendInvitation }} </span>
+
+
+        </a>
+        </div>
+        <div class="space">
+
+        </div>
+
+
+        <div fxLayout="row" fxLayoutAlign="start start" *ngIf="!_campaignService.allLoading">
+
+            <a appearance="outline" fxFlex mat-button class="reference-button save-button" target="_blank"
+                (click)="SendInvitation('select')">
+                
+                <span class="h1">Invitados marcados:</span>
+
+                <span class="h1"> {{ selectionCount }} </span>
+            </a>
+
+
+
+
+        </div>
+
+
+        <mat-progress-bar *ngIf="_campaignService.selectLoading" color="accent" class="checklist-progressbar"
+            mode="determinate" [value]="_campaignService.value * 10" bufferValue="100">
+        </mat-progress-bar>
+
+        <div fxLayout="row" fxLayoutAlign="start start" *ngIf="_campaignService.selectLoading">
+
+            <a appearance="outline" fxFlex mat-button class="reference-button save-button"
+                >
+                <span class="h1"> {{  _campaignService.statusSendInvitation }} </span>
+
+                
+
+
+        </a>
 
         </div>
 
     </div>
 
     <div mat-dialog-actions class="m-0 p-16" fxLayout="row" fxLayoutAlign="end center">
+
 
 
     </div>
