send mail dialog design and function ready!

--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -48,7 +48,7 @@
 
                 <button (click)="logout()" mat-menu-item class="">
                     <mat-icon>exit_to_app</mat-icon>
-                    <span>Logout</span>
+                    <span>Cerrar sesión</span>
                 </button>
 
             </mat-menu>
