--- a/src/app/main/pages/authentication/register/register.component.html
+++ b/src/app/main/pages/authentication/register/register.component.html
@@ -70,9 +70,10 @@
                     CREAR MI CUENTA
                 </button>
 
-                <div *ngIf="loading" class="spinner-loading" fxLayoutAlign="center center">
-                    <mat-spinner diameter="45"></mat-spinner>
-                </div>
+                <button *ngIf="loading" mat-raised-button color="accent" class="submit-button" fxLayoutAlign="center center" aria-label="LOG IN"
+                disabled="true">
+                <mat-spinner diameter="45"></mat-spinner>
+            </button>
 
             </form>
 
