send mail dialog design and function ready!

--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
@@ -18,7 +18,7 @@
                 
                 <span class="h1">Todos los invitados:</span>
 
-                <span class="h1"> {{ _campaignService.allContacts }} </span>
+                <span class="h1"> {{allContacts }} </span>
 
 
             </a>
