--- a/src/app/main/apps/contacts/contact-form/contact-form.component.html
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.html
@@ -47,7 +47,7 @@
 
 
             <div fxLayout="row" fxLayoutAlign="start start">
-                <mat-slide-toggle class="slide-bottom" appearance="outline" fxFlex formControlName="send_email">Marcar email</mat-slide-toggle>
+        <mat-slide-toggle class="slide-bottom" appearance="outline" fxFlex formControlName="send_email">Asiste</mat-slide-toggle>
              </div>
 
             <div fxLayout="row" fxLayoutAlign="start start">
