--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,16 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
 
 
 
+
+.my-class .mat-dialog-container{
+    height: 300px !important;
+    width: 400px !important;
+
+  }
+
+
+
+
+
+
+
