--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -13,42 +13,83 @@
                 </div>
 
                 <div>
-                    <div class="title">YOUR SESSION IS LOCKED</div>
+                    <div class="title">{{ _formInvitationService.campaignName }}</div>
                     <div class="subtitle">
-                        Due to inactivity, your session is locked. Enter your password to continue.
+                       Confirmar asistencia
                     </div>
                 </div>
 
             </div>
 
-            <form name="lockForm" [formGroup]="lockForm" novalidate>
+            <form name="lockForm" [formGroup]="invitationForm" novalidate>
+
+                
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Username</mat-label>
-                    <input matInput formControlName="username">
-                    <mat-icon matSuffix class="disabled-text">account_circle</mat-icon>
+                    <mat-label>Nombre</mat-label>
+                    <input matInput formControlName="name">
+                    <mat-icon matSuffix >account_circle</mat-icon>
+
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
-                    <input matInput formControlName="password">
-                    <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
-                    <mat-error>
-                        Password is required
-                    </mat-error>
+                    <mat-label>Correo electronico</mat-label>
+                    <input matInput formControlName="email">
+                    <mat-icon matSuffix >email</mat-icon>
+
                 </mat-form-field>
 
-                <button mat-raised-button class="submit-button" color="accent"
-                        aria-label="UNLOCK" [disabled]="lockForm.invalid">
-                    UNLOCK
+                <mat-form-field appearance="outline">
+                    <mat-label>Compañia</mat-label>
+                    <input matInput formControlName="company">
+                    <mat-icon matSuffix>domain</mat-icon>
+
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Cargo</mat-label>
+                    <input matInput formControlName="cargo">
+                    <mat-icon matSuffix >work</mat-icon>
+
+                </mat-form-field>
+
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Numero mobil</mat-label>
+                    <input matInput formControlName="numberMobil">
+                    <mat-icon matSuffix >smartphone</mat-icon>
+
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Numero fijo</mat-label>
+                    <input matInput formControlName="numberFijo">
+                    <mat-icon matSuffix >local_phone</mat-icon>
+
+                </mat-form-field>
+
+                <button mat-raised-button class="submit-button" color="accent">
+                    <mat-icon matSuffix >done</mat-icon>
+
+                    
+                    Confirmar
                 </button>
 
+
+                <button mat-raised-button class="cancel-button" 
+               >
+                Rechazar
+        </button>
             </form>
 
+            <!--
+
+
+          
             <div class="message">
                 <a class="link" [routerLink]="'/pages/auth/login'">Are you not Katherine?</a>
             </div>
-
+  -->
         </div>
 
     </div>
