--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -48,7 +48,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Cargo</mat-label>
-                    <input matInput formControlName="cargo">
+                    <input matInput formControlName="jobtitle">
                     <mat-icon matSuffix >work</mat-icon>
 
                 </mat-form-field>
@@ -56,7 +56,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Numero mobil</mat-label>
-                    <input matInput formControlName="numberMobil">
+                    <input matInput formControlName="phone">
                     <mat-icon matSuffix >smartphone</mat-icon>
 
                 </mat-form-field>
@@ -68,10 +68,10 @@
 
                 </mat-form-field>
 
-                <button mat-raised-button class="submit-button" color="accent">
+                <button mat-raised-button 
+                (click)="confirmInvitation()"
+                class="submit-button" color="accent">
                     <mat-icon matSuffix >done</mat-icon>
-
-                    
                     Confirmar
                 </button>
 
