confirm view ready

--- a/src/app/main/pages/errors/500/error-500.component.scss
+++ b/src/app/main/pages/errors/500/error-500.component.scss
@@ -22,6 +22,12 @@ error-500 {
                 text-align: center;
             }
 
+            .name-campaign {
+                font-size: 26px;
+                text-align: center;
+                color: #039be5;
+            }
+
             .sub-message {
                 font-size: 17px;
                 text-align: center;
