--- a/src/app/main/pages/errors/500/error-500.component.html
+++ b/src/app/main/pages/errors/500/error-500.component.html
@@ -2,15 +2,19 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="error-code">500</div>
+        <div class="error-code">Confirmación exitosa!</div>
 
-        <div class="message">Well, you broke the internet!</div>
+        <div class="message">a confirmado asistencia para el evento: </div>
+
+
+        <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div>
+
 
         <div class="sub-message">
-            Just kidding, looks like we have an internal issue, please try again in couple minutes
+           
         </div>
 
-        <a class="report-link" [routerLink]="'/dashboards/project'">Report this problem</a>
+        <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>
 
     </div>
 
