--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -56,8 +56,12 @@
     <ng-container matColumnDef="phone">
         <mat-header-cell *matHeaderCellDef >Asiste</mat-header-cell>
         <mat-cell *matCellDef="let contact"  >
-            <mat-icon *ngIf="contact.asiste" class="active-icon green-600 s-16">check</mat-icon>
-            <mat-icon *ngIf="!contact.asiste" class="active-icon red-500 s-16">close</mat-icon>
+            <mat-icon *ngIf="contact.asiste === 'si' " class="active-icon green-600 s-16">check</mat-icon>
+            <mat-icon *ngIf="contact.asiste === 'no' " class="active-icon red-500 s-16">close</mat-icon>
+
+            <mat-icon *ngIf="contact.asiste === 'null' " class="active-icon blue-500 s-16">pause_circle_outline</mat-icon>
+
+            
         </mat-cell>
     </ng-container>
 
