--- a/src/app/main/pages/authentication/lock/lock.component.scss
+++ b/src/app/main/pages/authentication/lock/lock.component.scss
@@ -104,3 +104,16 @@ margin: 16px auto;
 display: block;
 
 }
+
+
+.form-card {
+    max-width: 100%;
+    min-width: 100%;
+    border-radius: 8px;
+    margin-bottom: 3%;
+}
+
+.img-banner {
+    width: 100%;
+    border-radius: 3%;
+}
