--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -303,4 +303,85 @@
 
 
 
+.container-empty
+{
+  position: relative;
+  margin-top: 0px;
+  margin-bottom: 25px;
+  width: 500px;
+  height: 300px;
+  border-style: dashed;
+  color: #e0e0e0;
+}
+
+
+.container-load
+{
+  position: relative;
+  margin-top: 0px;
+  margin-bottom: 25px;
+  width: 500px;
+  height: 300px;
+
+}
+
+
+.overlay
+{
+    border-radius: 3%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  transition: background 0.5s ease;
+ }
+
+.img-empty
+{
+border-radius: 3%;
+  position: absolute;
+  width: 475px;
+  height: 295px;
+  left: 0;
+}
+
+.img-load
+{
+border-radius: 3%;
+  position: absolute;
+  width: 500px;
+  height: 300px;
+  left: 0;
+}
+
+.button
+{
+  position: absolute;
+
+margin: 46%;
+  left:0;
+  top:  100px;
+  text-align: center;
+  opacity:0;
+  transition: opacity .25s ease;
+}
+.button a
+{
+  width: 200px;
+  padding: 12px 48px;
+  text-align: center;
+  color: white;
+  border: solid 2px white;
+  z-index: 1;
+}
+.container:hover .button {
+  opacity: 1;
+}
+
+.container-load:hover .button {
+  opacity: 1;
+}
+
 
