ready upload img event

--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -68,7 +68,7 @@
                             <div fxLayout="row" fxLayoutAlign="start start" fxFlex="1 0 auto">
                 
                                   <div class="container-load" >
-                                    <img [src]="_campaignService.previewUrl"  class="img-load"  alt="" />
+                                    <img [src]="_campaignService.previewUrlEvent"  class="img-load"  alt="" />
                                     <input hidden  id="fileUpload" type="file" #fileInput />
                                     <div class="overlay"></div>
                                     <div></div>
