--- a/src/app/main/apps/e-commerce/products/products.component.html
+++ b/src/app/main/apps/e-commerce/products/products.component.html
@@ -102,7 +102,7 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header >Invitados</mat-header-cell>
                     <mat-cell *matCellDef="let product" >
                         <p class="price text-truncate">
-                            9
+                                {{product.countInvited}}
                         </p>
                     </mat-cell>
                 </ng-container>
