--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -67,9 +67,9 @@
 
                             <div fxLayout="row" fxLayoutAlign="start start" fxFlex="1 0 auto">
                 
-                                  <div class="container-load" >
+                                  <div [ngClass]="!_campaignService.imgProductLoad? 'container-empty': 'container-load'" >
                                     <img [src]="_campaignService.previewUrlEvent"  class="img-load"  alt="" />
-                                    <input hidden  id="fileUpload" type="file" #fileInput />
+                                    <input hidden  id="fileUpload" type="file" #fileInput formControlName="img"/>
                                     <div class="overlay"></div>
                                     <div></div>
                                     <button mat-fab  (click)="fileUpload()"  class="button fuse-white mt-24 mt-md-0">
