--- a/src/app/main/pages/errors/404/error-404.component.html
+++ b/src/app/main/pages/errors/404/error-404.component.html
@@ -2,16 +2,14 @@
 
     <div class="content" fxLayout="column" fxLayoutAlign="center center">
 
-        <div class="error-code">404</div>
+        <div class="error-code">Invitacion desestimada</div>
 
-        <div class="message">Sorry but we could not find the page you are looking for</div>
+        <div class="message">se ha cancelado la invitación al evento:</div>
 
-        <div class="search" fxLayout="row" fxLayoutAlign="start center">
-            <mat-icon class="icon s-24">search</mat-icon>
-            <input placeholder="Search for something" fxFlex>
-        </div>
+        <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div>
 
-        <a class="back-link" [routerLink]="'/apps/dashboards/project'">Go back to dashboard</a>
+
+        <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>
 
     </div>
 
